<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="maps_key">AIzaSyAyj2_BzoXGMR432LsT4dpv6TV6SdNbtDg</string>
    <string name="app_name">ShopLex</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Home fragment</string>
    <string name="LastOrder">Last Order</string>
    <string name="productName">Product Name</string>
    <string name="brand">Brand Name</string>
    <string name="price">Price</string>
    <string name="stauts">Status</string>
    <string name="location">Location</string>
    <string name="old_price_strike"><strike>Old Price</strike></string>
    <string name="currentProduct">Current Product</string>
    <string name="product">Products</string>
    <string name="reviews">Reviews</string>
    <string name="NoReviews">No Reviews Yet!</string>
    <string name="product_name">Name</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="longtext">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,as opposed to using Content here, content here, making it look like readable English.</string>
    <string name="newPrice">New Price</string>
    <string name="discount">15%</string>
    <string name="store_name">Store Name</string>
    <string name="property">Select Size</string>
    <string name="todo">TODO</string>
    <string name="customer_name">Customer Name</string>
    <string name="date">Date</string>
    <string name="comment">comment</string>
    <string name="category">Ctegory</string>
    <string name="all_review">All Review</string>
    <string name="Add">Add To Cart</string>
    <string name="Remove">Remove Cart</string>
    <string name="buy">Buy Now</string>
    <string name="fashion">Fashion</string>
    <string name="HealthCare">Health Care</string>
    <string name="Phones">Phones</string>
    <string name="Electronics">Electronics</string>
    <string name="Accessories">Accessories</string>
    <string name="TV">TV</string>
    <string name="old_price">old_price</string>
    <string name="new_price">new_price</string>
    <string name="rating_value">rating_value</string>
    <string name="sold">%s/%s Sold</string>
    <string name="name">name</string>
    <string name="storeName">storeName</string>
    <string name="space">space</string>
    <string name="user_name">User Name</string>
    <string name="type_a_message">Type a Message</string>
    <string name="Hello">Hello</string>
    <string name="monday_12_00">Monday 12:00</string>
    <string name="chatdiscount">You Can Agree With Seller About Any Discount</string>
    <string name="cancel">Cancel</string>
    <string name="orders">Orders</string>
    <string name="currentOrder">Current Order</string>
    <string name="reOrder">Re Order</string>
    <string name="logOut">Logout</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="setting">Settings</string>
    <string name="rateUs">Rate Us</string>
    <string name="removeAccount">Remove Account</string>
    <string name="themes">Theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="franko">Franko</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="helperText">You Can`t Change Your Email Address</string>
    <string name="change_location">Change Your Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="filter">Filter</string>
    <string name="login">Login</string>
    <string name="fullAccess">Login for full access</string>
    <string name="forgotPassword">Forget Password?</string>
    <string name="reset">Reset</string>
    <string name="close_dialog">Close</string>
    <string name="email_send">Email Send</string>
    <string name="or">OR</string>
    <string name="new_user">New User?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="Checkout">Checkout</string>
    <string name="Payment">Payment</string>
    <string name="Summary">Summary</string>
    <string name="DeliveryMethod">Delivery Method</string>
    <string name="Cost">Products Cost</string>
    <string name="SpecialCoupons">Special Coupons</string>
    <string name="DontHaveSpecialCoupons">You Don\'t Have Any Special</string>
    <string name="DoorDelivery">Door Delivery</string>
    <string name="NearestPostStation">Nearest Post Station</string>
    <string name="SubTotal">SubTotal</string>
    <string name="Discount">Discount</string>
    <string name="Shipping">Shipping</string>
    <string name="Total">Total Amount</string>
    <string name="subTotalPrice">112 $</string>
    <string name="discountPrice">150 $</string>
    <string name="shippingPrice">116 $</string>
    <string name="totalPrice">220 $</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="address">EbnSaiied_Feliming_SabaBasha , Alexandria , Egypt</string>
    <string name="change">Change</string>
    <string name="processtopayment">ProcessToPayment</string>
    <string name="process">Process To Payment</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="cash">Cash on Delivery</string>
    <string name="fawry">Fawry</string>
    <string name="vodafon">Vodafon Cash</string>
    <string name="copoun">Copoun</string>
    <string name="paymentdiscount">Discount by 5 $</string>
    <string name="processpayment">Process To Summary</string>
    <string name="itemnumbers">2 Item</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="shopes">Shopes</string>
    <string name="rate">Rating</string>
    <string name="discountFilter">Discount</string>
    <string name="sort">Sorting</string>
    <string name="nearest_shop">Nearest Shop</string>
    <string name="outOfStock">Out Of Stock</string>
    <string name="NA">N/A</string>
    <string name="LE">%s L.E.</string>
    <string-array name="initial_slider_values">
        <item>10</item>
        <item>1000</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shoplex">ShopLex</string>
    <string name="signup">Signup</string>
    <string name="Name">Name</string>
    <string name="choose_location">Choose Your Location</string>
    <string name="Required">Required</string>
    <string name="require_email">Required E-mail</string>
    <string name="min_password_err">"Week Password "</string>
    <string name="not_match">Invalid Password</string>
    <string name="min_client_name_err">Invalid Short Name</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Failed</string>
    <string name="logoutMessage">Are You Sure You Want To Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Category">Category</string>
    <string name="num">Number</string>
    <string name="totalAmount">Total Amount</string>
    <string name="first_time_key">FirstTime</string>
    <string name="what_is_your_rate">What is your Rate?</string>
    <string name="please_share_your_oponion_about_the_product">Please Share Your Oponion About The Product</string>
    <string name="your_review">Your Review</string>
    <string name="send_review">Send Review</string>
    <string name="title_activity_location">Map</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome to ShopLex</string>
    <string name="English">English</string>
    <string name="العربية">العربية</string>
    <string name="Offer">Offer</string>
    <string name="percent">%</string>
    <string name="productId">productID</string>
    <string name="CHAT_TITLE_KEY">CHAT_TITLE_KEY</string>
    <string name="CHAT_IMG_KEY">CHAT_IMG_KEY</string>
    <string name="chatID">chatID</string>
    <string name="USER_ID_KEY">USER_ID_KEY</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="Delivery">Delivery</string>
    <string name="mail">email</string>
    <string name="favouriteList">favouriteList</string>
    <string name="favorite">Favorite</string>
    <string name="cartList">cartList</string>
    <string name="twelve">12</string>
    <string name="Space">Space</string>
    <string name="Products">Products</string>
    <string name="Reviews">Reviews</string>
    <string name="ClickableViewAccessibility">ClickableViewAccessibility</string>
    <string name="mohamed">mohamed1995</string>
    <string name="UserIngo">UserIngo</string>
    <string name="FireBaseMessagingService">FireBaseMessagingService</string>
    <string name="notchannelid">net.larntech.notification</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="RemoteViewLayout">RemoteViewLayout</string>
    <string name="custom">custom://</string>
    <string name="actionstring">actionstring</string>
    <string name="canceled">com.example.cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="UpdateReview">Update Review</string>
    <string name="Review">Review</string>
    <string name="android">android.resource://</string>
    <string name="splash">/</string>
    <string name="Position">Position</string>
    <string name="EGP">%s EGP</string>
    <string name="StrEGP">EGP</string>
    <string name="LowPriceSelected">Low Price Selected</string>
    <string name="HighPriceSelected">High Price Selected</string>
    <string name="LoginFailed">Login Failed</string>
    <string name="storename">storeName</string>
    <string name="locationLat">locationLat</string>
    <string name="locationLang">locationLang</string>
    <string name="CurrentPosition">Current Position</string>
    <string name="LocationPermissionNeeded">Location Permission Needed</string>
    <string name="message">This app needs the Location permission, please accept to use location functionality</string>
    <string name="OK">OK</string>
    <string name="confirm">Confirm</string>
    <string name="permissiondenied">permission denied</string>
    <string name="storeID">storeID</string>
    <string name="phones">phoneNumber</string>
    <string name="productID">productID</string>
    <string name="messages">messages</string>
    <string name="tel">tel:</string>
    <string name="Loc">Loc</string>
    <string name="Address">Address</string>
    <string name="image">image/*</string>
    <string name="Success">Success</string>
    <string name="Authenticationfailed">Authentication failed.</string>
    <string name="checked">checked</string>
    <string name="notchecked">not checked</string>
    <string name="pleaseLogin">Please Login to Access All Features</string>
    <string name="userID">userID</string>
    <string name="Error">Error</string>
    <string name="deliveryMethod">Choose Delivery Method</string>
    <string name="favoriteproducts">Please Login to get all favorite products</string>
    <string name="underscore">_</string>
    <string name="DiscountBy">Discount By %s</string>
</resources>