<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_summary_card"

   android:layout_margin="@dimen/margin_8"
    android:background="@drawable/shippingcard"

    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"


    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_product_summary"
            android:layout_width="145dp"
            android:layout_height="140dp"
            android:layout_gravity="start"


            android:scaleType="fitXY"
            android:src="@drawable/product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="136dp"
            android:layout_height="41dp"


            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"

            android:text="@string/productName"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_product_summary"
            app:layout_constraintTop_toTopOf="@+id/img_product_summary" />

        <TextView
            android:id="@+id/tv_Quantity"
            android:layout_width="138dp"
            android:layout_height="53dp"

            android:text="@string/Quantity"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        <TextView
            android:id="@+id/tv_price_simmary"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
android:layout_marginRight="@dimen/margin_8"

            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/Price"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_product_summary"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
